--- a/iRobot-Roomba.indigoPlugin/Contents/Server Plugin/ghpu.cfg
+++ b/iRobot-Roomba.indigoPlugin/Contents/Server Plugin/ghpu.cfg
@@ -10,7 +10,7 @@
 owner = ghawken
 
 # REQUIRED: the name of the repository where the plugin is located
-name = iRobot-Roomba
+name = Indigo-iRobotRoomba
 
 # OPTIONAL: the path to the plugin inside the repository, defaults to base dir
 path = iRobot-Roomba.indigoPlugin
