--- a/iRobot-Roomba.indigoPlugin/Contents/Info.plist
+++ b/iRobot-Roomba.indigoPlugin/Contents/Info.plist
@@ -13,7 +13,7 @@
     <key>CFBundleDisplayName</key>
     <string>iRobot-Roomba</string>
     <key>CFBundleIdentifier</key>
-    <string>GlennNZ.indigo.plugin.irobot</string>
+    <string>com.GlennNZ.indigoplugin.plugin.irobot</string>
     <key>CFBundleVersion</key>
     <string>1.0.0</string>
     <key>CFBundleURLTypes</key>
