--- a/iRobot-Roomba.indigoPlugin/Contents/Info.plist
+++ b/iRobot-Roomba.indigoPlugin/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>PluginVersion</key>
-    <string>0.5.8</string>
+    <string>0.6.0</string>
     <key>ServerApiVersion</key>
     <string>2.0</string>
     <key>IwsApiVersion</key>
@@ -20,7 +20,7 @@
     <array>
         <dict>
             <key>CFBundleURLName</key>
-            <string>http://forums.indigodomo.com/viewtopic.php?f=22</string>
+            <string>https://forums.indigodomo.com/viewforum.php?f=265</string>
         </dict>
     </array>
 </dict>
